--- a/package.json
+++ b/package.json
@@ -74,11 +74,14 @@
     "react-resizable-panels": "^2.1.4",
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
+    "remark": "^15.0.1",
     "remark-gfm": "^4.0.0",
+    "remark-parse": "^11.0.0",
     "showdown": "^2.1.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "unist-util-visit": "^5.0.0",
     "vaul": "^1.0.0",
     "zod": "^3.23.8"
   },
